# AStarIRIS

./: CMakeLists.txt  CMakePresets.json  README.md
AStarIRIS/: AStarIRIS.cpp  AStarIRIS.h  CMakeLists.txt
AStarIRIS/docs/: Doxyfile  Doxyfile.bak
AStarIRIS/docs/html/: _a_star_i_r_i_s_conic_8h_source.html  _c_obs_8h_source.html  _c_obs_conic_8h_source.html  _circle_8h_source.html  _circle_node_8h_source.html  _conic_set_8h_source.html  _convex_relaxation_min_distance_solver_8h_source.html  _convex_relaxation_solver_8h_source.html  _eigen_nd_array_8h_source.html  _ellipsoid_8h_source.html  _ellipsoid_node_8h_source.html  _expandable_i_r_i_s_conic_8h_source.html  _g_c_s_8h_source.html  _graph_8h_source.html  _i_r_i_s_conic_8h_source.html  _m_c_i_r_i_s_conic_8h_source.html  _min_distance_solver_8h_source.html  _nav_graph_8h_source.html  _node_8h_source.html  _point_8h_source.html  _point_node_8h_source.html  _polyhedron_8h_source.html  _polyhedron_node_8h_source.html  _polyhedron_obstacle_circular_robot_8h_source.html  _polyhedron_obstacle_circular_robot_node_8h_source.html  _polyhedron_terminal_node_8h_source.html  _polyhedron_v_8h_source.html  _polyhedron_v_node_8h_source.html  _range_8h_source.html  _solver_8h_source.html  _sphere_8h_source.html  _sphere_node_8h_source.html  annotated.html  annotated_dup.js  class_a_star_i_r_i_s_conic-members.html  class_a_star_i_r_i_s_conic.html  class_c_obs-members.html  class_c_obs.html  class_c_obs_conic-members.html  class_c_obs_conic.html  (+92 more)
AStarIRIS/docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_8.js  classes_9.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_8.js  searchdata.js  variables_0.js
AStarIRIS/docs/latex/: _a_star_i_r_i_s_conic_8h_source.tex  _c_obs_8h_source.tex  _c_obs_conic_8h_source.tex  _circle_8h_source.tex  _circle_node_8h_source.tex  _conic_set_8h_source.tex  _convex_relaxation_min_distance_solver_8h_source.tex  _convex_relaxation_solver_8h_source.tex  _eigen_nd_array_8h_source.tex  _ellipsoid_8h_source.tex  _ellipsoid_node_8h_source.tex  _expandable_i_r_i_s_conic_8h_source.tex  _g_c_s_8h_source.tex  _graph_8h_source.tex  _i_r_i_s_conic_8h_source.tex  _m_c_i_r_i_s_conic_8h_source.tex  _min_distance_solver_8h_source.tex  _nav_graph_8h_source.tex  _node_8h_source.tex  _point_8h_source.tex  _point_node_8h_source.tex  _polyhedron_8h_source.tex  _polyhedron_node_8h_source.tex  _polyhedron_obstacle_circular_robot_8h_source.tex  _polyhedron_obstacle_circular_robot_node_8h_source.tex  _polyhedron_terminal_node_8h_source.tex  _polyhedron_v_8h_source.tex  _polyhedron_v_node_8h_source.tex  _range_8h_source.tex  _solver_8h_source.tex  _sphere_8h_source.tex  _sphere_node_8h_source.tex  annotated.tex  class_a_star_i_r_i_s_conic.tex  class_c_obs.tex  class_c_obs_conic.tex  class_circle.tex  class_circle_node.tex  class_conic_set.tex  class_convex_relaxation_min_distance_solver.tex  (+36 more)
AStarIRIS/include/: AStarGCS.h  AStarIRISConic.h  CObs.h  CObsConic.h  Circle.h  CircleNode.h  ConicSet.h  ConvexRelaxation.h  ConvexRelaxationBezierCurveSPP_GCS.h  ConvexRelaxationMinDistance.h  ConvexRelaxationMinDistanceSPP_GCS.h  ConvexRelaxationMinDistanceSolver.h  ConvexRelaxationSolver.h  EGCS.h  EigenNdArray.h  EigenUtils.h  Ellipsoid.h  EllipsoidNode.h  ExpandableIRISConic.h  GCS.h  Graph.h  IRISConic.h  MCIRISConic.h  MIPMinDistanceSPP_GCS.h  MinDistanceSolver.h  NavGraph.h  Node.h  PerspectiveSPP_GCS.h  Point.h  PointNode.h  Polyhedron.h  PolyhedronNode.h  PolyhedronObstacleCircularRobot.h  PolyhedronObstacleCircularRobotNode.h  PolyhedronTerminalNode.h  PolyhedronV.h  PolyhedronVNode.h  Range.h  SPP_GCS.h  Solver.h  (+2 more)
AStarIRIS/src/: AStarGCS.cpp  AStarIRISConic.cpp  CObs.cpp  CObsConic.cpp  Circle.cpp  CircleNode.cpp  ConicSet.cpp  ConvexRelaxation.cpp  ConvexRelaxationBezierCurveSPP_GCS.cpp  ConvexRelaxationMinDistance.cpp  ConvexRelaxationMinDistanceSPP_GCS.cpp  ConvexRelaxationMinDistanceSolver.cpp  ConvexRelaxationSolver.cpp  EGCS.cpp  EigenNdArray.cpp  EigenUtils.cpp  Ellipsoid.cpp  EllipsoidNode.cpp  ExpandableIRISConic.cpp  GCS.cpp  Graph.cpp  IRISConic.cpp  MCIRISConic.cpp  MIPMinDistanceSPP_GCS.cpp  MinDistanceSolver.cpp  NavGraph.cpp  Node.cpp  PerspectiveSPP_GCS.cpp  Point.cpp  PointNode.cpp  Polyhedron.cpp  PolyhedronNode.cpp  PolyhedronObstacleCircularRobot.cpp  PolyhedronObstacleCircularRobotNode.cpp  PolyhedronTerminalNode.cpp  PolyhedronV.cpp  PolyhedronVNode.cpp  Range.cpp  SPP_GCS.cpp  Solver.cpp  (+2 more)
AStarIRIS/tests/: AStar_IRIS_maze.cpp  AStar_IRIS_phase1_test.cpp  AStar_IRIS_test.cpp  Expandable_IRIS_test.cpp  IRIS_test.cpp  MC_IRIS_test.cpp  Multiagent_IRIS_test.cpp  closestPointExpandingEllipsoid_test.cpp  closestPoint_test.cpp  conicSetsPerformance.cpp  graph_cycle_analysis.cpp  graph_test.cpp  isInsideSeparatingHyperplanes_test.cpp  matplot_test.cpp  removeConstraints_test.cpp
